src/snapshots/jsonptr__assign__toml__tests__test-21.snap
---
source: src/assign.rs
description: asserting that the TOML data is as expected after assignment
info:
  data: data
  ptr: /-
  assign: 34
---
[34]
