src/snapshots/jsonptr__assign__toml__tests__test-22.snap
---
source: src/assign.rs
description: asserting that the replaced TOML data returned from the assignment is as expected
info:
  data: data
  ptr: /-
  assign: 34
---
Ok(
    Some(
        String(
            "data",
        ),
    ),
)
