src/snapshots/jsonptr__assign__toml__tests__test-27.snap
---
source: src/assign.rs
description: asserting that the TOML data is as expected after assignment
info:
  data: 21
  ptr: /1
  assign: foo
---
{ 1 = "foo" }
