src/snapshots/jsonptr__assign__toml__tests__test-3.snap
---
source: src/assign.rs
description: asserting that the replaced TOML data returned from the assignment is as expected
info:
  data: {}
  ptr: /foo
  assign: bar
---
Ok(
    None,
)
