src/snapshots/jsonptr__assign__toml__tests__test-30.snap
---
source: src/assign.rs
description: asserting that the replaced TOML data returned from the assignment is as expected
info:
  data: []
  ptr: /0
  assign: foo
---
Ok(
    None,
)
